# quiterss

./: CMakeLists.txt  QuiteRSS.pro  QuiteRSS.qrc  QuiteRSSApp.rc  README.md
.github/workflows/: build.yml  cmake-build.yml  qmake-build.yml  update-certificate.yml
data/: ca-bundle.crt
lang/: quiterss_en.ts  quiterss_zh_TW.ts
scripts/: update-certificate.sh
src/: BuildDateTime.h  CMakeLists.txt  aboutdialog.cpp  addfeedwizard.cpp  addfeedwizard.h  categoriestreewidget.cpp  categoriestreewidget.h  cleanupwizard.h  customizetoolbardialog.cpp  feedpropertiesdialog.cpp  feedpropertiesdialog.h  findfeed.h  findtext.h  newstabwidget.cpp  newstabwidget.h  optionsdialog.cpp  optionsdialog.h  parseobject.cpp  requestfeed.cpp  tabbar.h  updatefeeds.cpp  updatefeeds.h
src/adblock/: adblockblockednetworkreply.cpp  adblockdialog.cpp  adblockrule.cpp  adblocksubscription.cpp
src/application/: logfile.cpp  logfile.h  mainapplication.cpp  mainapplication.h  mainwindow.cpp  mainwindow.h  splashscreen.h
src/common/: common.cpp  common.h  delegatewithoutfocus.cpp  dialog.h
src/database/: database.cpp
src/downloads/: downloaditem.h  downloadmanager.h
src/feedsview/: feedsmodel.cpp  feedsproxymodel.cpp  feedsview.h
src/main/: globals.cpp  globals.h  main.cpp
src/network/: networkmanager.cpp  sslerrordialog.cpp
src/newsfilters/: filterrulesdialog.cpp  itemaction.h  itemcondition.h  newsfiltersdialog.cpp
src/newsview/: newsheader.cpp  newsheader.h  newsmodel.cpp  newsmodel.h  newsview.h
src/notifications/: notificationsfeeditem.cpp  notificationsfeeditem.h  notificationsnewsitem.h  notificationswidget.cpp  notificationswidget.h
src/plugins/: webpluginfactory.cpp
src/syncrss/: googlereader.h
src/webview/: webpage.cpp  webpage.h  webview.cpp
style/: dark.qss  gray.qss  green.qss  news.css  orange.qss  pink.qss  purple.qss  system.qss  system2.qss  web_dark.css
